add draft gsoc page content https://github.com/phetsims/special-ops/issues/275

--- a/docs/community/gsoc2025.md
+++ b/docs/community/gsoc2025.md
@@ -1,46 +1,210 @@
+# Google Summer of Code 2025 Project Ideas List
+
 !!! warning
-   PLACEHOLDER CONTENT
+      PLACEHOLDER CONTENT DO NOT PUBLISH
+
+This is a list of projects suggested by SceneryStack and PhET Interactive Simulations developers for [GSoC 2025](https://summerofcode.withgoogle.com/)
+
+- [Project 1: Develop an Accessible Game using SceneryStack](#project-1-develop-an-accessible-game-using-scenerystack)
+- [Project 2: Implement Accessibility View for All SceneryStack Projects](#project-2-implement-accessibility-view-for-all-scenerystack-projects)
+- [Project 3: Implement Custom Text Size Preferences](#project-3-implement-custom-text-size-preferences)
+- [Project 4: Develop Missing Components for SceneryStack UI Library](#project-4-develop-missing-components-for-scenerystack-ui-library)
+
+These are suggestions so if you have your own ideas then please discuss them on [Discussions forum](https://github.com/orgs/scenerystack/discussions) or the specific thread linked beside each project.
+
+See lower down on this page for more details for some of the projects listed above
+
+## Timeline
+
+The timeline for GSoC 2025 is at <https://developers.google.com/open-source/gsoc/timeline>.
+
+## What we look for from a contributor
+
+We look for:
+
+- Discussion and engagement with the community on the project you are interested in
+- Clear and detailed application explaining how you think the project could be done
+- Relevant prior experience
+- Understanding of Git and/or GitHub
+
+Read the [GSoC Student Guide](https://google.github.io/gsocguides/student/). It has a lot of useful information on how to write a good proposal.
+
+## Project Ideas (updated January 2025)
   
-### Implementing a Non-Modal Dialog Component for PhET Simulations
-Project size: 90 hours
+### Project 1: Develop an Accessible Game using SceneryStack
+
+**Project Size:** 175 hours
+**Estimated difficulty:** Intermediate
+**Recommended Skills:**
+
+- JavaScript: Proficient in JavaScript for implementing interactive features.
+- TypeScript: Basic knowledge of TypeScript to work with existing codebases and enhance type safety.
+- Git/GitHub: Skills to contribute code and communicate
+  
+[**Project Discussion Thread**](<https://github.com/orgs/scenerystack/discussions> TODO: ADD SPECIFIC THREAD)
+
+**Mentor(s):** (To be determined)
+
+#### Description
+
+SceneryStack supports the creation of accessible, flexible web interactives through a set of features enabling, among other things, keyboard access and novel screen reader access that promotes navigation and reading of dynamic and static text content as a user interacts. These features are implemented in many [PhET Interactive Simulations](https://phet.colorado.edu/en/inclusive-design/features), but we do not yet have a set of examples in other interactives categories, such as games.
+
+#### Key Tasks
+
+Create an accessible demo application/game using [SceneryStack](https://scenerystack.org/learn/overview/) and all supported [accessibility features](a11y resources page or Inclusive Design page…) (including sounds, keyboard navigation (alternative input), pan and zoom, [screen reader accessible interactive descriptions](PDOM LINK), Voicing, custom color profiles).
+
+Project Ideas:
+Chess (large number of interactives)
+Checkers
+Black Jack
+Ultimate Tic Tac Toe
+
+#### Expected Outcomes/Benefits/Deliverables
+
+#### Why This Project?
+
+Why This Project?
+
+We can go the route of
+Showing that something someone creates for the web (even if it’s not a new challenge) can be made accessible (maybe more simply, but we’re getting there) using all of the features of SceneryStack
+<https://www.chess.com/play/computer> is not keyboard accessible - most popular chess platform
+Neither is <https://lichess.org/> , though it does have a “blind mode” that is a bit opaque
+<https://royalur.net/> is not keyboard accessible
+<https://games.washingtonpost.com/games/blackjack> not accessible (#1 search result for keyboard-accessible blackjack on the web)
+
+Compared to sites we tested:
+We can offer current state and overview.
+Clear accessibility upon load, rather than finding button to activate a “blind mode” or requiring screen reader for keyboard access.
+
+#### How to Apply
+
+Interested students should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
+
+---
+
+### Project 2: Implement Accessibility View for All SceneryStack Projects
+
+**Project Size:** 175 hours
+**Estimated difficulty:** hard
+**Recommended Skills:**
+
+- JavaScript: Proficient in JavaScript for implementing interactive features.
+- TypeScript: Basic knowledge of TypeScript to work with existing codebases and enhance type safety.
+- Git/GitHub: Skills to contribute code and communicate
+[Project Discussion Thread](<https://github.com/orgs/scenerystack/discussions> TODO: ADD SPECIFIC THREAD)
+**Mentor(s):** (To be determined)
+
+#### Description
+
+Generalize the a11y view to work for any Scenery display. Proposal to "start from scratch" in contrast to modifying existing sim context: Generalize the a11y view to work in other contexts chipper#1512.
+
+Requisite Background Knowledge:
+Requires getting familiar with PDOM and Scenery, and likely some familiarity with design framework
+Understand current a11y view
+Understand basics of description design framework
+
+#### Key Tasks
+
+#### Expected Outcomes/Benefits/Deliverables
+
+#### Why This Project?
+
+#### How to Apply
+
+Interested students should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
+
+---
+
+### Project 3: Implement Custom Text Size Preferences
+
+**Project Size:** 90 hours (small)
+**Estimated Difficulty:** Intermediate
+**Recommended Skills:**
+
+- JavaScript: Proficient in JavaScript for implementing interactive features.
+- TypeScript: Basic knowledge of TypeScript to work with existing codebases and enhance type safety.
+- Git/GitHub: Skills to contribute code and communicate
+  
+[PhET Custom Text Size Preferences Discussion](<https://github.com/orgs/scenerystack/discussions/TODO>: ADD SPECIFIC THREAD)
+**Mentor(s):** (To be determined)
+
+#### Description
+
+SceneryStack seeks to enhance accessibility by allowing users to customize text sizes. This project involves developing controls to adjust text sizes dynamically. Key tasks include identifying all relevant text elements in the codebase, implementing size adjustments, ensuring dynamic layout integrity, and adding a global hotkey for font size changes. Collaboration with designers will be essential to iterate on UI/UX improvements.
+
+#### Key Tasks
+
+Identify Text Elements: Write code that will locate relevant text elements in the codebase that require size adjustments.
+Implement Size Adjustment: Modify these elements to support dynamic text sizing.
+Identify Appropriate UI Control: Determine and integrate a suitable UI control for adjusting text sizes within Joist or other relevant components.
+Add Global Hotkeys: Implement global hotkeys (e.g., Ctrl+/Cmd+ to increase and Ctrl-/Cmd- to decrease font sizes) for quick text size adjustments.
+Ensure Dynamic Layout Integrity: Adjust layouts to accommodate varying text sizes, maintaining readability and visual appeal.
+Collaborate with Designers: Work with the design team to refine text sizing solutions.
+Testing and Validation: Ensure that text size adjustments do not disrupt simulation functionality or user experience.
+
+#### Expected Outcomes/Benefits/Deliverables
+
+Custom Text Size Control: A user-friendly control integrated into Joist or relevant components for adjusting text sizes.
+Global Hotkeys: Implemented shortcuts (Ctrl+/Cmd+ and Ctrl-/Cmd-) for increasing and decreasing font sizes.
+Enhanced Accessibility: Improved accessibility for users with visual impairments or those preferring larger text.
+Comprehensive Documentation: Documentation detailing the process for identifying and modifying text elements.
+Collaborative Workflow Experience: Experience working with designers on UI/UX improvements.
+Codebase Enhancements: Refactored code to support dynamic text sizing, enhancing PhET’s software flexibility.
+
+#### Why This Project?
+
+Implementing custom text size preferences is a crucial step towards making PhET simulations more accessible and user-friendly. This project contributes to the inclusivity of educational tools and offers valuable experience in front-end development, UI/UX design collaboration, and accessibility standards implementation.
+
+#### How to Apply
+
+Interested students should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
+
+---
+
+### Project 4: Develop Missing Components for SceneryStack UI Library
+
+Project Size: 90 hours
 Estimated difficulty: Intermediate
+Recommended Skills: JavaScript and basic Typescript
+[Project Discussion Thread](https://github.com/orgs/scenerystack/discussions) <!--TODO: ADD SPECIFIC THREAD
+**Mentor(s):** (To be determined)
 
-Recommended Skills
-* Proficiency in JavaScript and TypeScript
-* Experience with web development (HTML, CSS)
-* Familiarity with the PhET codebase and component architecture
-* Knowledge of accessibility (a11y) standards and practices
-* Optional: Experience with UI/UX design for educational software
+#### Description
 
-### Description
+Investigate popular UI frameworks and create common, but missing UI components in SceneryStack (to SceneryStack spec w/ a11y) e.g., Create a non-modal dialog sun#916. Improve the glass pane layer so ComboBox can operate without a “parent” being passed in.
+
 PhET Interactive Simulations aim to make science and math learning engaging and accessible. While the current PhET simulations include modal dialogs for user interactions, there is a growing need for a non-modal dialog component. Non-modal dialogs allow users to interact with other parts of the application without closing the dialog, enhancing usability and accessibility.
 
 Several PhET simulations have implemented custom solutions for non-modal dialogs, leading to inconsistencies and maintenance challenges. This project involves developing a standardized, reusable non-modal dialog component within the PhET's Sun library (the UI component library). The component should address previous issues identified in custom implementations, such as proper focus management, positioning, and accessibility compliance.
 
-### Expected Outcomes/Benefits/Deliverables
-Non-Modal Dialog Component:
+#### Key Tasks
 
+Non-Modal Dialog Component:
 Develop a flexible and reusable non-modal dialog component within the PhET Sun library.
 Support features such as customizable positioning, focus management, and interaction with underlying content.
-Accessibility Compliance:
 
+Accessibility Compliance:
 Ensure the component adheres to accessibility standards (e.g., WCAG).
 Implement proper ARIA roles and keyboard navigation to make the dialog accessible to users with disabilities.
-Integration and Refactoring:
 
+Integration and Refactoring:
 Integrate the new non-modal dialog component into at least one existing PhET simulation, replacing custom implementations.
 Refactor simulations like Mean Share and Balance, Natural Selection, and Models of the Hydrogen Atom to use the new component, if time permits.
-Documentation and Guidelines:
 
+Documentation and Guidelines:
 Write comprehensive documentation on how to use the non-modal dialog component.
 Provide guidelines for developers to incorporate the component into other simulations.
-Testing and Quality Assurance:
 
+Testing and Quality Assurance:
 Conduct thorough testing across different browsers and devices to ensure compatibility.
 Work with the PhET team to perform user testing and gather feedback for improvements.
 
 By implementing a standardized non-modal dialog component, this project will significantly improve the consistency and accessibility of PhET simulations. It will serve educators and learners who benefit from more interactive and flexible user interfaces, particularly those who rely on assistive technologies.
 
-### Potential Mentors
+#### Expected Outcomes/Benefits/Deliverables
 
-...
+#### Why This Project?
+
+#### How to Apply
+
+Interested students should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
