template page edits, FAQ edits, general cleanup,  https://github.com/scenerystack/community/issues/118 https://github.com/scenerystack/community/issues/83 https://github.com/scenerystack/community/issues/88

--- a/docs/community/gsoc2025.md
+++ b/docs/community/gsoc2025.md
@@ -10,9 +10,9 @@ This is a list of projects suggested by SceneryStack and PhET Interactive Simula
 - [Project 3: Implement Custom Text Size Preferences](#project-3-implement-custom-text-size-preferences)
 - [Project 4: Develop Missing Components for SceneryStack UI Library](#project-4-develop-missing-components-for-scenerystack-ui-library)
 
-These are suggestions so if you have your own ideas then please discuss them on [Discussions forum](https://github.com/orgs/scenerystack/discussions) or the specific thread linked beside each project.
+See below for more details on the projects listed above.
 
-See lower down on this page for more details for some of the projects listed above
+Potential contributors are not limited to the specific project ideas or the scope of the projects as detailed below. If you have ideas, please share them on the [Discussions forum](https://github.com/orgs/scenerystack/discussions) or in the specific thread linked beside each project.
 
 ## Timeline
 
@@ -31,55 +31,95 @@ Read the [GSoC Student Guide](https://google.github.io/gsocguides/student/). It 
 
 ## Project Ideas (updated January 2025)
   
-### Project 1: Develop an Accessible Game using SceneryStack
+### Project 1: Develop an Accessible Game using SceneryStack  
 
-**Project Size:** 175 hours
-**Estimated difficulty:** Intermediate
-**Recommended Skills:**
+**Project Size:** 175 hours  
+**Estimated Difficulty:** Intermediate  
+**Recommended Skills:**  
 
-- JavaScript: Proficient in JavaScript for implementing interactive features.
-- TypeScript: Basic knowledge of TypeScript to work with existing codebases and enhance type safety.
-- Git/GitHub: Skills to contribute code and communicate
-  
-[**Project Discussion Thread**](<https://github.com/orgs/scenerystack/discussions> TODO: ADD SPECIFIC THREAD)
+- **JavaScript:** Proficient in JavaScript for implementing interactive features.  
+- **TypeScript:** Basic knowledge of TypeScript to work with existing codebases and enhance type safety.  
+- **Git/GitHub:** Skills to contribute code and communicate effectively within the development team.  
+- **Web Accessibility (a11y):** Understanding of ARIA roles, screen reader compatibility, and inclusive design principles.  
+- **Game Development Concepts:** Experience or interest in developing interactive applications with game logic.  
 
-**Mentor(s):** (To be determined)
+[Project Discussion Thread](<https://github.com/orgs/scenerystack/discussions> TODO: ADD SPECIFIC THREAD)  
 
-#### Description
+**Mentor(s):** TBD  
 
-SceneryStack supports the creation of accessible, flexible web interactives through a set of features enabling, among other things, keyboard access and novel screen reader access that promotes navigation and reading of dynamic and static text content as a user interacts. These features are implemented in many [PhET Interactive Simulations](https://phet.colorado.edu/en/inclusive-design/features), but we do not yet have a set of examples in other interactives categories, such as games.
+---
 
-#### Key Tasks
+### Description  
 
-Create an accessible demo application/game using [SceneryStack](https://scenerystack.org/learn/overview/) and all supported [accessibility features](a11y resources page or Inclusive Design page…) (including sounds, keyboard navigation (alternative input), pan and zoom, [screen reader accessible interactive descriptions](PDOM LINK), Voicing, custom color profiles).
+SceneryStack supports the creation of accessible, flexible web interactives by providing keyboard access, screen reader compatibility, and other accessibility features. While these features are well integrated into **PhET Interactive Simulations**, there is a lack of practical examples demonstrating their use in interactive games.  
 
-Project Ideas:
-Chess (large number of interactives)
-Checkers
-Black Jack
-Ultimate Tic Tac Toe
+This project aims to develop a **fully accessible web-based game** using SceneryStack, showcasing **keyboard navigation, alternative input methods, screen reader-compatible interactions, and customizable visual/audio features**. The game will serve as a **template and proof-of-concept** for making browser-based games more inclusive.  
 
-#### Expected Outcomes/Benefits/Deliverables
+---
 
-#### Why This Project?
+### Key Tasks  
 
-Why This Project?
+- **Game Concept and Design:**  
+  - Select a game genre (e.g., board game, puzzle, card game, turn-based strategy).  
+  - Define core mechanics and ensure they can be implemented with accessibility in mind.  
 
-We can go the route of
-Showing that something someone creates for the web (even if it’s not a new challenge) can be made accessible (maybe more simply, but we’re getting there) using all of the features of SceneryStack
-<https://www.chess.com/play/computer> is not keyboard accessible - most popular chess platform
-Neither is <https://lichess.org/> , though it does have a “blind mode” that is a bit opaque
-<https://royalur.net/> is not keyboard accessible
-<https://games.washingtonpost.com/games/blackjack> not accessible (#1 search result for keyboard-accessible blackjack on the web)
+- **Develop an Interactive Game with Accessibility Features:**  
+  - Use **SceneryStack** to create a working prototype with full accessibility support.  
+  - Implement **keyboard navigation**, including arrow-key and shortcut controls.  
+  - Support **screen reader interactions**, ensuring proper navigation and feedback.  
+  - Incorporate **Voicing features**, enabling auditory game feedback.  
+  - Add **color customization options** to improve contrast for low-vision users.  
+  - Implement **pan and zoom functionality** for adjustable views.  
 
-Compared to sites we tested:
-We can offer current state and overview.
-Clear accessibility upon load, rather than finding button to activate a “blind mode” or requiring screen reader for keyboard access.
+- **User Testing and Refinement:**  
+  - Conduct accessibility audits to validate compatibility with screen readers (e.g., NVDA, JAWS, VoiceOver).  
+  - Gather feedback from users with disabilities and iterate based on findings.  
+  - Ensure compatibility with different browsers and devices.  
 
-#### How to Apply
+- **Documentation & Contribution:**  
+  - Provide a detailed **development guide** for implementing SceneryStack in other games.  
+  - Write **clear accessibility testing guidelines** to help future contributors maintain accessibility.  
 
-Interested students should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
+---
 
+### Expected Outcomes/Benefits/Deliverables  
+
+**Fully Functional Accessible Game** – A playable, web-based game with **comprehensive a11y support**, serving as a model for future projects.  
+
+**Showcase of SceneryStack's Accessibility Features** – Demonstrating how developers can **integrate a11y-first principles** into game development.  
+
+**Improved Web Gaming Accessibility** – Addressing the current lack of **keyboard-accessible** and **screen reader-friendly** online games.  
+
+**Extensive Documentation** – Guides on implementing accessibility features in browser-based games.  
+
+**User Testing Insights** – Providing valuable data on accessible design for interactive applications.  
+
+---
+
+### Why This Project?  
+
+Many popular online games are **not keyboard or screen reader accessible**, making them unusable for many people with disabilities. Here are some examples:  
+
+- **[Chess.com](https://www.chess.com/play/computer)** – No keyboard accessibility.  
+- **[Lichess](https://lichess.org/)** – Has a "blind mode," but usability is unclear.  
+- **[RoyalUr](https://royalur.net/)** – Not keyboard accessible.  
+- **[Washington Post Blackjack](https://games.washingtonpost.com/games/blackjack)** – Inaccessible; #1 search result for "keyboard-accessible blackjack."  
+
+Our game will serve as an **accessible alternative** and prove that web games **can** be both **engaging and inclusive** from the start.  
+
+Unlike most games that require users to **find and activate** accessibility settings, our project aims to provide **clear accessibility features from the moment the page loads**—removing barriers to entry for all players.  
+
+---
+
+### How to Apply  
+
+Interested students should:  
+
+1. **Join the Discussion:** Participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express interest and ask questions.  
+2. **Showcase Relevant Experience:** Share examples of past projects, contributions, or knowledge in accessibility and game development.  
+3. **Propose Ideas:** Suggest potential game concepts and accessibility enhancements for consideration.  
+
+This project is an **exciting opportunity to contribute to inclusive gaming**, improve your web development skills, and help shape the future of accessible web interactives! 🚀
 ---
 
 ### Project 2: Implement Accessibility View for All SceneryStack Projects
